feat: add attempt docs
